# DaedalusAADC2016

./: README.md
aadcUser/: .CMakeLists.txt.swp
aadcUser/description/: daedalus_complete.description
aadcUser/include/: aadc_roadSign_enums.h  constant.h  daedalus_action_constant.h  daedalus_action_enums.h  daedalus_emergency_constant.h  daedalus_obstacle_enum.h  daedalus_open_challenge_enums.h
aadcUser/src/DAEDALUS_Action/: CMakeLists.txt  CMakeLists.txt~  IPM.cpp  IPM.cpp~  IPM.h  ParkingType.cpp  ParkingType.cpp~  backup_daedalus_action.cpp~  daedalus_action.cpp  daedalus_action.cpp~  daedalus_action.h  daedalus_action.h~  stdafx.h~
aadcUser/src/DAEDALUS_Action_Db/: CMakeLists.txt  ParkingType.cpp  ParkingType.h  daedalus_action_db.cpp  daedalus_action_db.cpp~  daedalus_action_db.h  daedalus_action_db.h~
aadcUser/src/DAEDALUS_Crossroad_Stop/: CMakeLists.txt  DAEDALUS_Crossroad_Stop.cpp  DAEDALUS_Crossroad_Stop.h
aadcUser/src/DAEDALUS_Decision/: CMakeLists.txt  NewMethods.cpp  ParkingType.cpp  ParkingType.h  daedalusDecision.cpp  daedalusDecision.h  stdafx.h
aadcUser/src/DAEDALUS_DriverModule/: CMakeLists.txt  daedalusDriverModule.cpp  daedalusDriverModule.h  stdafx.h
aadcUser/src/DAEDALUS_EmergencyFilter/: CMakeLists.txt  CMakeLists.txt~  EmergencyFilter.cpp  EmergencyFilter.h
aadcUser/src/DAEDALUS_LaneTracking/: CMakeLists.txt  DAEDALUS_LaneTracking.cpp  DAEDALUS_LaneTracking.h  Readme.txt
aadcUser/src/DAEDALUS_LaneTrackingExt/: CMakeLists.txt  DAEDALUS_LaneTrackingExt.cpp  DAEDALUS_LaneTrackingExt.h
aadcUser/src/DAEDALUS_Mapping/: CMakeLists.txt  DAEDALUS_Mapping.cpp  DAEDALUS_Mapping.h  stdafx.h
aadcUser/src/DAEDALUS_ParkingspotDetection/: CMakeLists.txt  ParkingType.cpp  ParkingType.cpp~  ParkingType.h  parkingspot_detection.cpp  parkingspot_detection.cpp~  parkingspot_detection.h  parkingspot_detection.h~  stdafx.h  stdafx.h~
aadcUser/src/DAEDALUS_util/: DAEDALUS_util.cpp  DAEDALUS_util.cpp~  DAEDALUS_util.h  DAEDALUS_util.h~
aadcUser/src/DaedalusObjectDetection/: CMakeLists.txt  object_filter.cpp  object_filter.h
aadcUser/src/Daedalus_OpenChallenge/: CMakeLists.txt  OpenChallenge.cpp  OpenChallenge.h  stdafx.h
aadcUser/src/extra/: CMakeLists.txt~
aadcUser/src/extra/DAEDALUS_IdValue/: CMakeLists.txt  daedalus_idvaluesender.cpp  daedalus_idvaluesender.h  stdafx.h
aadcUser/src/extra/Filter_Drive/: CMakeLists.txt  CMakeLists.txt~  Filter_Drive.cpp  Filter_Drive.cpp~  Filter_Drive.h  Filter_Drive.h~
aadcUser/src/extra/IPM/: CMakeLists.txt~  IPM.h~
aadcUser/src/extra/Landmarks/: HLineLandmark.cpp  HLineLandmark.h  Landmark.cpp  Landmark.h
aadcUser/src/extra/Map/: Map.cpp  Map.h
aadcUser/src/extra/baselineFilter/: CMakeLists.txt  baseline_filter.cpp  baseline_mean.cpp  baseline_mean.cpp~  blend  build.sh  build.sh~  process  processing.cpp  processing.cpp~
aadcUser/src/extra/camera_check/: build.sh  camera_check.cpp  check
aadcUser/src/extra/imageSaveFilter/: CMakeLists.txt  CMakeLists.txt~  image_save_filter.cpp  image_save_filter.cpp~
aadcUser/src/extra/objectFilter/: CMakeLists.txt  ObjectFilter.sh  object_filter.cpp  object_filter.h
aadcUser/src/extra/util/map/: lane_map.cpp
aadcUser/src/utile/: CMakeLists.txt  CMakeLists.txt~  Readme.txt
